changes in yaml files for database integration

--- a/backend/src/main/resources/application-local.yaml
+++ b/backend/src/main/resources/application-local.yaml
@@ -1,5 +1,6 @@
 profile:
   datasource:
-    url: postgresql://localhost:5432/IntestinalInspector
+    url: postgresql://localhost:5432/intinspec
     user: admin
     pass: 12345
+
