--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -54,6 +54,12 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.maven.surefire</groupId>
+            <artifactId>surefire</artifactId>
+            <version>3.0.0-M5</version>
+            <type>pom</type>
+        </dependency>
 
         <!-- SWAGGER -->
         <dependency>
