--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -67,6 +67,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.1</version>
+        </dependency>
 
 
         <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok-maven-plugin -->
