--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -59,6 +59,7 @@
             <scope>test</scope>
         </dependency>
 
+
         <!-- SWAGGER -->
         <dependency>
             <groupId>io.springfox</groupId>
@@ -100,7 +101,12 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.19.1</version>
+                <version>2.22.0</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>2.22.0</version>
             </plugin>
         </plugins>
     </build>
