--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,11 +7,14 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "chart.js": "^3.5.1",
     "jsonwebtoken": "^8.5.1",
     "react": "^17.0.2",
+    "react-chartjs-2": "^3.0.5",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "recharts": "^2.1.4",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.1.2"
   },
